# RtmpStreamer

./: .gitignore  Dockerfile  LICENSE  README.md  configure.py  meson.build  meson.options  native-file.ini
bindings/: meson.build  rtmp_streamer.pxd  rtmp_streamer.pyx  setup.py.in
bindings/src/: rtmp_streamer.pxd
examples/: example.cpp  example.py.in  meson.build
include/: rtmp.hpp
src/: rtmp.cpp
